# PHAS0100LSAAssignment2

./: CMakeLists.txt  CTestConfig.cmake  README.md  rename.sh
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  pa2IncludeMPI.cmake  pa2IncludeOpenMP.cmake  pa2SetupMSVCRuntime.cmake  pa2SetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  pa2HelloWorld.cpp
Code/Lib/: CMakeLists.txt  pa2Exception.cpp  pa2Exception.h  pa2ExceptionMacro.h  pa2MyFunctions.cpp  pa2MyFunctions.h  pa2Win32ExportHeader.h
Testing/: CMakeLists.txt  pa2CatchMain.cpp  pa2CatchMain.h  pa2CommandLineArgsTest.cpp  pa2MyFunctionsTest.cpp  pa2PiSeriesMPITest.cpp  pa2PiSeriesOMPTest.cpp  pa2TriangleNumberSeriesMPITest.cpp
